[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://ExampleAnimatedObject.gd" type="Script" id=2]
[ext_resource path="res://addons/GifMaker/GifRecorder.gd" type="Script" id=3]
[ext_resource path="res://ExampleScene.gd" type="Script" id=4]
[ext_resource path="res://addons/GifMaker/GifRectangle.gd" type="Script" id=5]
[ext_resource path="res://addons/GifMaker/GifDecoder.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.768627, 0.145098, 0.145098, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.13, 0.13, 0.13, 0.290196 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[node name="Example2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.929412, 0.866667, 0.847059, 1 )

[node name="Icon" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 2.0
margin_top = 2.0
margin_right = 66.0
margin_bottom = 66.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="ExampleAnimatedObject" type="Node2D" parent="."]
position = Vector2( 512, 300 )
script = ExtResource( 2 )
amount = 6

[node name="GifDecoder" type="Node" parent="."]
script = ExtResource( 6 )

[node name="GifRectangle" type="ReferenceRect" parent="." groups=["gif_rectangles"]]
margin_left = 448.0
margin_top = 236.0
margin_right = 576.0
margin_bottom = 364.0
rect_pivot_offset = Vector2( 64, 64 )
border_color = Color( 0, 0, 1, 1 )
border_width = 3.0
script = ExtResource( 5 )

[node name="GifRecorder" type="Viewport" parent="."]
size = Vector2( 128, 128 )
render_target_v_flip = true
render_target_update_mode = 0
script = ExtResource( 3 )
render_type = 1
capture_node_path = NodePath("../GifRectangle")
preview = true
preview_render = true
preview_path = NodePath("../Preview")

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = 169.0
margin_right = 128.0
margin_bottom = 183.0
custom_styles/fg = SubResource( 1 )
max_value = 1.0
value = 0.5

[node name="Label" type="Label" parent="ProgressBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -31.0
margin_right = 20.0
margin_bottom = -17.0
grow_horizontal = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Rendering GIF..."
align = 1

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = 230.0
margin_right = 41.0
margin_bottom = 250.0
text = "Record GIF"

[node name="Preview" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -272.0
margin_top = -272.0
margin_right = -16.0
margin_bottom = -16.0
expand = true

[node name="ColorRect" type="ColorRect" parent="Preview"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
color = Color( 0.4, 0.3724, 0.364, 1 )

[node name="Label" type="Label" parent="Preview"]
margin_left = -3.0
margin_top = -17.0
margin_right = 99.0
margin_bottom = -3.0
grow_horizontal = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GIF Preview"

[node name="FPS" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -56.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 30.0
text = "60 fps"
